--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_compose">ComposeActivity</string>
     <string name="title_activity_messages">MessagesActivity</string>
     <string name="title_activity_friends">FriendsActivity</string>
+    <string name="title_activity_map">MapActivity</string>
 
 </resources>
